--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ The cases of initialize method is needed are:</p>
 <ul>
 <li>You want to make preparations in advance.</li>
 <li>You changed structure of the table that was already parsed.</li>
-</ul><p>If the element that is included in current target jQuery object is <code>&lt;table&gt;</code>, that table is parsed. If element is part of <code>&lt;table&gt;</code> (<code>&lt;tr&gt;</code>, <code>&lt;td&gt;</code>, <code>&lt;th&gt;</code>, <code>&lt;thead&gt;</code>, <code>&lt;tfoot&gt;</code> or <code>&lt;tbody&gt;</code>), the table that has those parts  is parsed.
+</ul><p>If the element that is included in current target jQuery object is <code>&lt;table&gt;</code>, that table is parsed. If element is part of the table (<code>&lt;tr&gt;</code>, <code>&lt;td&gt;</code>, <code>&lt;th&gt;</code>, <code>&lt;thead&gt;</code>, <code>&lt;tfoot&gt;</code> or <code>&lt;tbody&gt;</code>), the table that has those parts  is parsed.
 i.e. these codes below are equals:</p>
 
 <div class="highlight highlight-js"><pre><span class="nx">$</span><span class="p">(</span><span class="s1">'table#table1'</span><span class="p">).</span><span class="nx">getTable</span><span class="p">();</span>
@@ -473,7 +473,7 @@ i.e. these codes below are equals:</p>
 <span class="nx">$</span><span class="p">(</span><span class="s1">'table#table1&gt;tbody:eq(0)&gt;tr:eq(0)'</span><span class="p">).</span><span class="nx">getTable</span><span class="p">();</span>
 </pre></div>
 
-<p>getTable discern nested table correctly, therefore if <code>td</code> of only inner table is given, outer table is not parsed.</p>
+<p>getTable discern nested table correctly, therefore if <code>&lt;td&gt;</code> of only inner table is given, outer table is not parsed.</p>
 
 <h2>
 <a name="note" class="anchor" href="#note"><span class="octicon octicon-link"></span></a>Note</h2>
