--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ $(function() {
 
   <main>
 
+<p><a href="https://www.npmjs.com/package/jquery-gettable"><img src="https://img.shields.io/npm/v/jquery-gettable.svg" alt="npm"></a> <a href="https://github.com/anseki/jquery-gettable/issues"><img src="https://img.shields.io/github/issues/anseki/jquery-gettable.svg" alt="GitHub issues"></a> <a href="package.json"><img src="https://img.shields.io/david/anseki/jquery-gettable.svg" alt="David"></a> <a href="LICENSE-MIT"><img src="https://img.shields.io/badge/license-MIT-blue.svg" alt="license"></a></p>
+
 <!-- include "sample_02a.html" -->
 <!-- ================ sample -->
 <div class="sample-col-r">
