--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/sample.css">
   <!-- Libs for sample codes must be loaded in "head". -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="js/jquery.gettable.min.js"></script>
+  <script src="js/libs-aaeddc2-190412213855.js"></script>
 
   <title>getTable</title>
 </head>
